# Construction-project-master

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  server.py  setup_keys.py
civilplan_mcp/: config.py  models.py  secure_store.py  server.py  setup_keys.py
civilplan_mcp/data/: association_prices_catalog.json  data_validity_warnings.json  guidelines_catalog.json  indirect_cost_rates.json  legal_procedures.json  price_update_calendar.json  region_factors.json  rental_benchmark.json  road_standards.json  supervision_rates.json  unit_prices_2026.json  waste_disposal_prices_2025.json
civilplan_mcp/db/: __init__.py  bootstrap.py  schema.sql
civilplan_mcp/prompts/: __init__.py  birdseye_templates.py
civilplan_mcp/services/: __init__.py  gemini_image.py
civilplan_mcp/tools/: __init__.py  _base.py  benchmark_validator.py  bid_type_selector.py  birdseye_generator.py  boq_generator.py  budget_report_generator.py  doc_generator.py  drawing_generator.py  dxf_generator.py  feasibility_analyzer.py  guideline_fetcher.py  guideline_resolver.py  impact_evaluator.py  land_info_query.py  legal_procedures.py  (+6 more)
tests/: test_base.py  test_birdseye_generator.py  test_birdseye_templates.py  test_config_and_secure_store.py  test_data_files.py  test_extended_tools.py  test_gemini_image.py  test_generators.py  test_impacts.py  test_land_info_and_benchmark_fallbacks.py  test_land_info_ingestion_and_updater.py  test_legal.py  test_parser.py  test_quantities.py  test_server_registration.py  test_setup_keys.py  test_smoke.py  test_updater.py  test_v11_tools.py
(+9 files in other folders)
